# Scale-aware-Pose-Graph-Optimization

./: output.txt  readme.md  visual.py
jump_scale_aware_optimization/: CMakeLists.txt  g2o_optimization.cpp
scale_aware_optimization/: g2o_optimization.cpp
